--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <button (click)="startTask()">START</button>
 <button (click)="resetTask()">RESET</button>
 <button (click)="cancelTask()">CANCEL</button>
+<button (click)="throw()">THROW</button>
 <p>
 <div>
   <input [(ngModel)]=progressStep> Progress step
