--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,12 @@
 button {
   margin: 5px;
 }
+
+.container {
+  display: inline-grid;
+  border: black;
+  border-style: solid;
+  border-width: thin;
+  padding: 10px;
+  margin: 10px;
+}
