--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,35 @@
-<button (click)="startTask()">START</button>
-<button (click)="resetTask()">RESET</button>
-<button (click)="cancelTask()">CANCEL</button>
-<button (click)="throw()">THROW</button>
-<p>
-<div>
-  <input [(ngModel)]=progressStep> Progress step
+
+<div class="container">
+  <button (click)="startTask()">START</button>
+  <button (click)="resetTask()">RESET</button>
+  <button (click)="cancelTask()">CANCEL</button>
+  <button (click)="throw()">THROW</button>
 </div> 
-<div>
-  <input [(ngModel)]=postTaskDelay> Create delay in ms
-</div> 
-<div>
-  <input [(ngModel)]=getTaskByGuidDelay> Update delay in ms
-</div> 
-<div>
-  <input [(ngModel)]=postCancelTaskDelay> Cancel delay in ms
-</div> 
-<button (click)="configure()">CONFIGURE</button>
-<p>
-<div>{{ message }}</div>
-<p>
-<div>ServiceAction {{ serviceActionCounter }}x</div>
-<div>TaskUpdated {{ onTaskUpdatedCounter }}x</div>
-<div>SuccessAction {{ successActionCounter }}x</div>
-<div>TaskFailed {{ onTaskFailedCounter }}x</div>
-<div>ConnectionClosed {{ onConnectionClosedCounter }}x</div>
-<p>
-<div *ngFor="let task of tasks">
-  <longRunningTask [task$]=task.task$></longRunningTask>
+<div class="container">
+  <div>
+    <input [(ngModel)]=progressStep> Progress step
+  </div> 
+  <div>
+    <input [(ngModel)]=postTaskDelay> Create delay in ms
+  </div> 
+  <div>
+    <input [(ngModel)]=getTaskByGuidDelay> Update delay in ms
+  </div> 
+  <div>
+    <input [(ngModel)]=postCancelTaskDelay> Cancel delay in ms
+  </div> 
+  <button (click)="configure()">CONFIGURE</button>
+</div>
+<div class="container">
+  <div>ServiceAction {{ serviceActionCounter }}x</div>
+  <div>TaskUpdated {{ onTaskUpdatedCounter }}x</div>
+  <div>SuccessAction {{ successActionCounter }}x</div>
+  <div>TaskFailed {{ onTaskFailedCounter }}x</div>
+  <div>ConnectionClosed {{ onConnectionClosedCounter }}x</div>
+</div>
+<span *ngFor="let task of tasks">
+  <longRunningTask [task$]=task.task$ [cancel]=cancelTask.bind(this)></longRunningTask>
+</span>
+<div style="position: absolute; bottom: 10px;">
+  <div *ngFor="let message of messages" style="font-weight: 8px;">{{ message }}</div>
 </div>
